<resources>
    <string name="app_name">Number Guessing</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Game Main Menu</string>
    <string name="statistics">STATISTICS</string>
    <string name="rookie">img_rookie</string>
    <string name="rookie_level">ROOKIE LEVEL</string>
    <string name="wins">WINS :</string>
    <string name="looses">LOOSES :</string>
    <string name="veteran_level">VETERAN LEVEL</string>
    <string name="title_activity_rookie">RookieActivity</string>
    <string name="title_activity_veteran">VeteranActivity</string>
    <string name="start">START NEW GAME</string>
    <string name="guess">SUBMIT NUMBER = TRY TO GUESS</string>
    <string name="attempts">ATTEMPT №</string>
    <string name="current_input">CURRENT INPUT :</string>
    <string name="back_to_main_menu">BACK TO MAIN MENU</string>
</resources>
