<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="xyz.valeev.numberguessing.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background= "@drawable/wood">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/statistics"
        android:id="@+id/textView2"
        android:layout_marginTop="23dp"
        android:visibility="invisible"
        android:onClick="onClickShowStatistic"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:src="@drawable/rookie"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rookie_level"
        android:id="@+id/textView3"
        android:layout_above="@+id/textView4"
        android:layout_alignEnd="@+id/imageButton" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wins"
        android:id="@+id/textView4"
        android:layout_marginTop="23dp"
        android:visibility="invisible"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <!-- Rookie Wins statistic-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewRookieWinsValue"
        android:text= "TEST"
        android:visibility="invisible"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/looses"
        android:id="@+id/textView6"
        android:visibility="invisible"
        android:layout_alignTop="@+id/textViewRookieWinsValue"
        android:layout_alignEnd="@+id/textView3" />

    <!-- Rookie Looses statistic-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewRookieLoosesValue"
        android:visibility="invisible"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView2"
        android:src="@drawable/veteran"
        android:layout_below="@+id/imageButton"
        android:layout_toStartOf="@+id/imageButton"
        android:layout_marginTop="41dp" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/imageButton"
        android:src="@drawable/play_button"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textViewRookieWinsValue"
        android:layout_alignStart="@+id/textViewRookieWinsValue"
        android:onClick="onClickStartRookie"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/veteran_level"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wins"
        android:id="@+id/textView9"
        android:layout_marginTop="23dp"
        android:visibility="invisible"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <!-- Veteran Wins statistic-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text= "FFF"
        android:visibility="invisible"
        android:id="@+id/textViewVeteranWinsValue"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toEndOf="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/looses"
        android:id="@+id/textView11"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/textViewVeteranWinsValue"
        android:layout_alignStart="@+id/textView6" />

    <!-- Veteran Looses statistic-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewVeteranLoosesValue"
        android:visibility="invisible"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignStart="@+id/textViewRookieLoosesValue" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/imageButton2"
        android:src="@drawable/play_button_red"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textViewVeteranWinsValue"
        android:layout_alignStart="@+id/textViewVeteranWinsValue"
        android:onClick="onClickStartVeteran"/>


</RelativeLayout>
